@@ -16,7 +16,8 @@ Version 0.4s
  - There's a new build system, based on Node.js and Gulp. This won't affect 99% of players
  - Save compression is now used for the "online" saves (localStorage), significantly reducing the size of saves. This will not affect save editing, since the SaveToFile and SaveToText functionality are unchanged
 * Fuckton of typos fixed
-* Maria got some new talk topics, and ranger training
+* Maria got some new talk topics, and ranger training. Written by The Observer
+* A new combat encounter added to the Highlands. Written by The Observer
 
 --------------------------------------------
              PREVIOUS VERSIONS
